--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hunt",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
@@ -45,5 +45,17 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.7.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 14.1.1.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/erbanc/hunt-front.git"
+  },
+  "author": "erbanc",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/erbanc/hunt-front/issues"
+  },
+  "homepage": "https://github.com/erbanc/hunt-front#readme"
 }
