--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.1.0",
+    "@angular/cli": "^14.1.3",
     "@angular/common": "^14.1.0",
     "@angular/compiler": "^14.1.0",
-    "@angular/cli": "^14.1.3",
     "@angular/compiler-cli": "^14.1.0",
     "@angular/core": "^14.1.0",
     "@angular/forms": "^14.1.0",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "bootstrap": "^5.2.0",
     "express": "^4.18.1",
+    "mdb-ui-kit": "^5.0.0",
     "ngx-cookie-service": "^14.0.1",
     "ngx-toastr": "^15.0.0",
     "path": "^0.12.7",
